--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
     "immer": "^6.0.3",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
